--- a/just_audio_background/pubspec.yaml
+++ b/just_audio_background/pubspec.yaml
@@ -12,7 +12,10 @@ dependencies:
   just_audio_platform_interface: ^4.3.0
   # just_audio_platform_interface:
   #   path: ../just_audio_platform_interface
-  audio_service: ^0.18.14
+  audio_service:
+      git:
+        url: https://github.com/JT-Yash/audio_service.git
+        path: audio_service
   audio_session: ^0.1.20
   flutter:
     sdk: flutter
